samples/_failures_safe/1761248127_dc5d04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f7734872.c: In function ‘main’:
./samples/SAFE/__tmp_f7734872.c:136:30: error: missing terminating " character
  136 |             cols2 = read_int("Enter
      |                              ^~~~~~
./samples/SAFE/__tmp_f7734872.c:136:13: error: expected expression at end of input
  136 |             cols2 = read_int("Enter
      |             ^~~~~
./samples/SAFE/__tmp_f7734872.c:136:21: error: too few arguments to function ‘read_int’
  136 |             cols2 = read_int("Enter
      |                     ^~~~~~~~
./samples/SAFE/__tmp_f7734872.c:24:5: note: declared here
   24 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_f7734872.c:136:13: error: expected declaration or statement at end of input
  136 |             cols2 = read_int("Enter
      |             ^~~~~
./samples/SAFE/__tmp_f7734872.c:136:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f7734872.c:136:13: error: expected declaration or statement at end of input
